# enclave-credential-gateway

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Caddyfile  Cargo.toml  Containerfile.cli.stagex  Containerfile.stagex  Dockerfile  Makefile  Procfile  README.md  SPEC.md  TEE-SECURITY.md  docker-compose.override.yml  docker-compose.yml  product.md  task.md
.caution/: deployment.json  quorum-bundle.json
.caution/secrets/: GATE_ADMIN_TOKEN.asc
.github/workflows/: release-verify.yml
checksums/: sha256sums-559c5b5.txt  sha256sums-c9b3c92.txt
crates/coco-cli/: Cargo.toml  builtin-tools.toml
crates/coco-cli/src/: client.rs  config.rs  main.rs  secure_file.rs  test_support.rs  tooling.rs
crates/coco-cli/src/commands/: activate.rs  env.rs  git_credential.rs  mod.rs  token.rs  tool.rs
crates/coco-gateway/: Cargo.toml
crates/coco-gateway/src/: admin.rs  auth.rs  health.rs  lib.rs  main.rs  profile.rs  proxy.rs  registry.rs  state.rs
crates/coco-gateway/tests/: integration_test.rs
crates/enclave-credential-gateway/: Cargo.toml  build.rs
crates/enclave-credential-gateway/src/: admin.rs  auth.rs  credstore.rs  lib.rs  main.rs  proxy.rs  registry.rs  state.rs
crates/enclave-credential-gateway/tests/: integration_test.rs
crates/gate-cli/: Cargo.toml  build.rs
crates/gate-cli/src/: client.rs  config.rs  main.rs  test_support.rs  tooling.rs  transport.rs
crates/gate-cli/src/commands/: activate.rs  creds.rs  git_credential.rs  mod.rs  token.rs
docs/: BUILDING.md  LOCKSMITH.md  TEE-SECURITY.md  USING.md  product.md  task.md
examples/: profile.json
openspec/: config.yaml
openspec/changes/archive/2026-04-12-profile-based-routing/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-12-profile-based-routing/specs/phantom-token-gateway/: spec.md
openspec/changes/archive/2026-04-13-poc-v1a-proxy-plain/: README.md  tasks.md
openspec/changes/archive/2026-04-13-poc-v1a-proxy-plain/specs/phantom-token-gateway/: spec.md
openspec/changes/archive/poc-v1-coco-creds-gateway/: proposal.md  tasks.md
openspec/changes/archive/poc-v1-coco-creds-gateway/specs/phala-deployment/: spec.md
openspec/changes/archive/poc-v1-coco-creds-gateway/specs/phantom-token-gateway/: spec.md
openspec/changes/poc-v1-coco-creds-gateway/: design.md  proposal.md  tasks.md
openspec/changes/poc-v1-coco-creds-gateway/specs/attestation-endpoint/: spec.md
openspec/changes/poc-v1a-proxy-plain/: design.md  proposal.md  tasks.md
openspec/changes/poc-v1a-proxy-plain/specs/docker-packaging/: spec.md
openspec/changes/poc-v1b-cvm-attestation/: README.md  design.md  proposal.md  tasks.md
openspec/changes/poc-v1b-cvm-attestation/specs/attestation-endpoint/: spec.md
openspec/changes/poc-v1b-cvm-attestation/specs/phala-deployment/: spec.md
openspec/specs/docker-packaging/: spec.md
openspec/specs/phantom-token-gateway/: spec.md
openspec/specs/profile-routing/: spec.md
profiles/: README.md  anthropic.json  coco.yaml  elevenlabs.json  github.json  groq.json  ollama.json  openai.json  routes.json  telegram.json  together.json
profiles/routes/: anthropic.yaml  github.yaml  openai.yaml
profiles/tools/: claude-code.yaml  codex.yaml  gh.yaml
scripts/: build-stagex-oci.sh  test-e2e.sh
spec/: gate-creds-push-spec.md  roadmap.md  tee-security.md  vision.md
