[package]
name = "coco-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "coco"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
