[package]
name = "gate-cli"
version = "0.1.0"
edition = "2021"
description = "Alpha early implementation CLI for Enclave Credential Gateway"

[[bin]]
name = "gate"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
dirs = "5"
anyhow = "1"
hex = "0.4"
steve-sdk = { git = "https://codeberg.org/vkobel/steve-e2e-enclave-channel.git", rev = "71fde6c26a121d4e7b64f00df3006a86c7fb6847" }

[dev-dependencies]
tempfile = "3"
